add_library(compiler STATIC context.cc lexer.cc expressions.cc parser.cc codegen.cc)
target_compile_options(compiler PRIVATE -Wall -fno-exceptions)
target_compile_features(compiler PRIVATE cxx_std_17)
target_include_directories(compiler PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(compiler LLVM doctest  ${EXTRA_LIBS})
add_sanitizers(compiler)
